030108 - <form> tag added

--- a/structure.html
+++ b/structure.html
@@ -18,8 +18,11 @@ false
 
 </head><!-- mistake - closing head tag moved above body -->
 <body>
-    <label>Log into your account</label><!-- mistake - label tag closed -->
+	<form action="index.html" method="post"><!-- mistake - label and input put inside a form tag -->
+		<label>Log into your account</label><!-- mistake - label tag closed -->
     <input placeholder="Type your password" type="text"></input><!-- 2 mistakes - 1)text moved to placeholder attribute (not between tags) 2)type attribute added to input -->
+	</form>
+
 </body>
 
 <!-- 030109 -->
