radio input changed to checkbox

--- a/forms030401.html
+++ b/forms030401.html
@@ -15,8 +15,8 @@
 			<label for="password-input">Password:</label>
 			<input type="password" id="password-input" name="password-input" placeholder="Type password here...">
 			<br>
-			<label for="newsletter-radio">Agree to receive newsletters</label>
-			<input type="radio" name="newsletter-radio" id="newsletter-radio">
+			<label for="newsletter-checkbox">Agree to receive newsletters</label>
+			<input type="checkbox" name="newsletter-checkbox" id="newsletter-checkbox">
 			<br>
 			<button type="submit" form="signup-form" name="signup-button">Signup</button>
 			<button type="button" name="cancel-button" onClick="window.location.href='forms.html'">cancel</button>
