--- a/forms030402.html
+++ b/forms030402.html
@@ -5,15 +5,17 @@
 		<title>Swift Airlines Search</title>
 	</head>
 	<body>
-		<label for="origin-input">Origin:</label>
-		<input type="text" id="origin-input" name="origin-input" placeholder="Type origin here...">
-		<label for="destination-input">Destination:</label>
-		<input type="text" id="destination-input" name="destination-input" placeholder="Type destination here...">
-		<select>
-			<option value="Economy">Economy</option>
-			<option value="Business" selected>Business</option>
-			<option value="First">First</option>
-		</select>
-		<button type="button" name="search">Search</button>
+		<form class="airline-form" action="index.html" method="post">
+			<label for="origin-input">Origin:</label>
+			<input type="text" id="origin-input" name="origin-input" placeholder="Type origin here...">
+			<label for="destination-input">Destination:</label>
+			<input type="text" id="destination-input" name="destination-input" placeholder="Type destination here...">
+			<select>
+				<option value="Economy">Economy</option>
+				<option value="Business" selected>Business</option>
+				<option value="First">First</option>
+			</select>
+			<button type="button" name="search">Search</button>
+		</form>
 	</body>
 </html>
